DupliFaces: Inconsistent handling of group member types #40051

Closed
opened 2014-05-06 19:53:32 +02:00 by Willi · 6 comments

System Information
Win7/64, AMD HD6850

Blender Version
Broken: 2.69, 2.70a, latest build 7660218

Short description of error
see subject

Exact steps for others to reproduce the error
This problem has already been reported as #39136. As there was no response after I saw the fix didn't work for me, I'm reporting this issue here again.This time with a more practical example: DupliFaces_(2).blend

  • Open the file: At the bottom there are grouped objects. At the top there is a group instance.
  • Render and have a look at the artifact (due to faces at same location) of the left-most power-plug of the group instance:

DupliFaces.png

Reason: With DupliFace enabled, the child objects are rendered for each face whereas the child itself and the faces themselves are not rendered. This is expected. However, this doesn't work if the member of a group is a group instance which is additionally rendered.

Thanks again.

**System Information** Win7/64, AMD HD6850 **Blender Version** Broken: 2.69, 2.70a, latest build 7660218 **Short description of error** see subject **Exact steps for others to reproduce the error** This problem has already been reported as #39136. As there was no response after I saw the fix didn't work for me, I'm reporting this issue here again.This time with a more practical example: [DupliFaces_(2).blend](https://archive.blender.org/developer/F87302/DupliFaces__2_.blend) - Open the file: At the bottom there are grouped objects. At the top there is a group instance. - Render and have a look at the artifact (due to faces at same location) of the left-most power-plug of the group instance: ![DupliFaces.png](https://archive.blender.org/developer/F87303/DupliFaces.png) Reason: With DupliFace enabled, the child objects are rendered for each face whereas the child itself and the faces themselves are not rendered. This is expected. However, this doesn't work if the member of a group is a group instance which is additionally rendered. Thanks again.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @willi-2

Added subscriber: @willi-2

This issue was referenced by blender/blender-addons-contrib@5e55fc21b7

This issue was referenced by blender/blender-addons-contrib@5e55fc21b78a9a6070b951bccf10a539b06f8e97

This issue was referenced by 5e55fc21b7

This issue was referenced by 5e55fc21b78a9a6070b951bccf10a539b06f8e97

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 5e55fc21b7.

Closed by commit 5e55fc21b7.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#40051
No description provided.