Fix T40051: Inconsistent dupli vert/face handling of group member types